--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 AD - update DB username/password info -> update README.md
 AD - remove all secrets from code committed to github (.env file?)
 AD - make <select> tags display current value in gray until a valid one is selected
+MP - change favicon to Moon
 
 LINE_COUNT:
 cat <(find private public -type f -not -name '*.jpg')  <(echo -e '.gitignore\nREADME.md\nserver.js\nTODO') | xargs wc 
