--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 AD - update DB username/password info -> update README.md
 AD - remove all secrets from code committed to github (.env file?)
 AD - make <select> tags display current value in gray until a valid one is selected
-MP - change favicon to Moon
+Any - change favicon to Moon
+Any - update about page text
 
 LINE_COUNT:
 cat <(find private public -type f -not -name '*.jpg' -not -path '*/lib/*')  <(echo -e '.gitignore\nREADME.md\nserver.js\nTODO') | xargs wc 
